<resources>
    <string name="app_name">WhatDo</string>
    <string name="app_bar_title">WhatDo ~ task tracker</string>
    <string name="floating_action_button">FAB to create to-do</string>
    <string name="time_picker_placeholder">Set Time: TIME_PICKER</string>
    <string name="date_picker_placeholder">Set Date: DATE_PICKER</string>
    <string name="reschedule">Reschedule</string>
    <string name="cancel">Cancel</string>
    <string name="text_whitespace">"      "</string>
    <string name="placeholder_text">placeholder text</string>
    <string name="add_task_hint">Add a task</string>
    <string name="notes">Notes</string>
    <string name="date_button">Date button</string>
    <string name="time_button">Time button</string>
    <string name="view_by_title">View ToDos By…</string>
    <string name="set_view_by_conditions">set view by conditions</string>
    <string name="view_by_picker_date_range_title">Select which dates to view</string>
    <string name="view_by_picker_date_title">Select which date to view</string>
    <string name="viewing_date_text">currently displayed date(s)</string>
    <string name="viewing_default_text">viewing all open tasks</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="upcoming_tasks_widget_header">Upcoming Tasks</string>
    <string name="create_a_todo">Create a Todo</string>
    <string name="closes_create_todo_dialog">Closes Create Todo Dialog</string>
    <string name="this_todo_is_about">This todo is about...</string>
    <string name="save_notes_button">Save Notes Button</string>
    <string name="empty_task_error">Cannot make an empty task</string>
    <string name="recurring_tast_title">Make Todo Recurring</string>
    <string name="confirm_recurring">Confirm</string>
    <string name="set_recurring">Set Recurring</string>
    <string name="Daily">Daily</string>
    <string name="Weekly">Weekly</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="SUNDAY">1</string>
    <string name="MONDAY">2</string>
    <string name="TUESDAY">3</string>
    <string name="WEDNESDAY">4</string>
    <string name="THURSDAY">5</string>
    <string name="FRIDAY">6</string>
    <string name="SATURDAY">7</string>
    <string name="r_interval_daily">Interval (in days)</string>
    <string name="r_interval_weekly">Interval (in weeks)</string>
    <string name="recurring_title">Make Todo Recurring</string>
    <string name="RD">RD</string>
    <string name="symbol_dash">-</string>
    <string name="N">N</string>
    <string name="RW">RW</string>
    <string name="dd">N</string>
    <string name="confirm">Confirm</string>
    <string name="must_enter">Must enter</string>
    <string name="interval">interval</string>
    <string name="max_interval">Max interval: 999</string>
    <string name="daily">daily</string>
    <string name="weekly">weekly</string>
    <string name="todo_reoccurs">todo reoccurs</string>
    <string name="all_upcoming">all upcoming</string>
    <string name="tag_button_desc">Tag Button</string>
    <string name="tag_display_desc">tag display</string>
    <string name="add_new_tag_title">Add New Tag</string>
    <string name="close_tag_dialog_desc">close tag dialog</string>
    <string name="add_tag_hint">Add a Tag</string>
    <string name="single_day_menu">Single Day</string>
    <string name="date_range_menu">Date Range</string>
    <string name="all_upcoming_menu">All Upcoming</string>
    <string name="tag_filter_menu">Tag Filter</string>
    <string name="overflow_menu_icon">overflow menu icon</string>
    <string name="top_menu_icon_btn">top menu icon</string>
    <string name="show_all_tags">Show All Tags</string>
    <string name="add_new_tag">Add New Tag</string>
    <string name="tags_dialog_title">Tags</string>
    <string name="all_tags">All Tags</string>
    <string name="close_all_tags_dialog">close all tags dialog</string>
    <string name="search_tags_hint">Search Tags</string>
    <string name="tag_button_desc_create">Tag button</string>
</resources>
