<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="6dp"
            android:key="@id/top_app_bar"
            app:title="@string/app_bar_title"
            app:menu="@menu/top_app_bar" />

        <androidx.cardview.widget.CardView
            android:id="@+id/viewing_date_card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_by_cardview_height"
            app:layout_constraintTop_toBottomOf="@id/top_app_bar"
            android:backgroundTint="@color/colorAccent"
            android:padding="@dimen/recycler_view_padding">

            <TextView
                android:id="@+id/viewing_date_text"
                android:layout_marginTop="@dimen/recycler_view_padding"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/viewing_date_text"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/all_upcoming"
                android:textAlignment="center"
                android:textColor="@color/plusIcon"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_item_spacing"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:backgroundTint="@color/colorAccent"
        android:clickable="true"
        android:contentDescription="@string/floating_action_button"
        android:elevation="@dimen/std_elevation"
        android:scaleType="center"
        app:fabCustomSize="@dimen/add_button_dimen"
        app:fabSize="auto"
        app:iconSize="@dimen/add_button_dimen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="@dimen/add_button_dimen"
        android:src="@drawable/ic_add" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/todo_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/match_constraint"
        android:clipToPadding="false"
        android:paddingLeft="@dimen/recycler_view_padding"
        android:paddingTop="@dimen/recycler_view_padding"
        android:paddingBottom="@dimen/recycler_view_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>