<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/create_todo_dialog">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dp_2"
        android:layout_gravity="center_vertical"
        android:layout_centerInParent="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/create_todo_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_a_todo"
                android:textColor="@android:color/white"
                android:padding="@dimen/dp_20"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageButton
                android:id="@+id/close_dialog"
                android:layout_width="@dimen/dp_19"
                android:layout_height="@dimen/dp_25"
                android:layout_marginEnd="@dimen/dp_16"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_close_black"
                android:tint="@color/colorAccent"
                android:contentDescription="@string/closes_create_todo_dialog"
                app:layout_constraintBottom_toBottomOf="@id/create_todo_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/todo_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_20"
                android:background="@android:color/white"
                app:layout_constraintTop_toBottomOf="@id/create_todo_title"
                app:layout_constraintStart_toStartOf="parent">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/create_todo_task_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/add_task_hint"
                    android:background="@android:color/white"
                    android:hint="@string/add_task_hint"
                    app:errorEnabled="true"
                    app:boxBackgroundColor="@android:color/white"
                    app:hintTextColor="@color/colorPrimary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/create_todo_task_name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/create_todo_time_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/time_button"
                    app:layout_constraintBottom_toBottomOf="@id/create_todo_finish_btn"
                    app:layout_constraintStart_toEndOf="@+id/create_todo_date_btn"
                    app:srcCompat="@drawable/ic_access_time_24dp" />

                <ImageButton
                    android:id="@+id/create_todo_tag_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/tag_button_desc_create"
                    app:layout_constraintBottom_toBottomOf="@id/create_todo_finish_btn"
                    app:layout_constraintStart_toEndOf="@id/create_todo_time_btn"
                    app:srcCompat="@drawable/ic_outline_label_24"/>


                <TextView
                    android:id="@+id/create_todo_date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@+id/create_todo_notes_text"
                    app:layout_constraintStart_toStartOf="@id/create_todo_task_name_layout"
                    app:layout_constraintTop_toBottomOf="@+id/create_todo_task_name_layout" />

                <TextView
                    android:id="@+id/create_todo_time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    app:layout_constraintBottom_toTopOf="@+id/create_todo_notes_text"
                    app:layout_constraintStart_toEndOf="@+id/create_todo_date_text"
                    app:layout_constraintTop_toBottomOf="@+id/create_todo_task_name_layout" />

                <TextView
                    android:id="@+id/create_todo_tag_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    app:layout_constraintBottom_toTopOf="@+id/create_todo_notes_text"
                    app:layout_constraintStart_toEndOf="@+id/create_todo_time_text"
                    app:layout_constraintTop_toBottomOf="@+id/create_todo_task_name_layout" />

                <ImageButton
                    android:id="@+id/create_todo_notes_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/notes"
                    app:layout_constraintBottom_toBottomOf="@id/create_todo_finish_btn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/ic_create_24dp" />

                <ImageButton
                    android:id="@+id/create_todo_date_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/date_button"
                    app:layout_constraintBottom_toBottomOf="@id/create_todo_finish_btn"
                    app:layout_constraintStart_toEndOf="@+id/create_todo_notes_btn"
                    app:srcCompat="@drawable/ic_date_range_24dp" />


                <EditText
                    android:id="@+id/create_todo_notes_text"
                    android:layout_width="@dimen/match_constraint"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/this_todo_is_about"
                    android:ems="10"
                    android:hint="@string/this_todo_is_about"
                    android:inputType="textMultiLine"
                    android:maxLines="6"
                    android:scrollbars="vertical"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@+id/create_todo_notes_btn"
                    app:layout_constraintStart_toStartOf="@id/create_todo_task_name_layout" />

                <Button
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:id="@+id/create_todo_finish_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_16"
                    app:icon="@drawable/ic_send_black_24dp"
                    app:iconGravity="textStart"
                    app:iconTint="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/create_todo_task_name_layout" />

                <ImageView
                    android:id="@+id/create_todo_is_recurring"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/create_todo_time_text"
                    app:layout_constraintStart_toEndOf="@+id/create_todo_time_text"
                    app:layout_constraintTop_toTopOf="@+id/create_todo_time_text"
                    app:srcCompat="@drawable/ic_repeat_24"
                    tools:visibility="invisible" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>