...
                    android:hint="@string/add_tag_hint"
                    app:errorEnabled="true"
                    app:boxBackgroundColor="@android:color/white"
                    app:hintTextColor="@color/colorPrimary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/add_tag_finish_btn">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/add_tag_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

...
